--- a/category/2. Project&Publication.md
+++ b/category/2. Project&Publication.md
@@ -3,6 +3,8 @@ layout: category
 title: Publication/Project
 ---
 
+<div style="margin-left: 20px;">
+
 <h1><b>Publications</b></h1>
 <div style="margin-top: 50px;margin-left: 20px;">
 	<p style="margin-bottom: 15px">
@@ -38,3 +40,4 @@ title: Publication/Project
 
 </div>
 
+</div>
