--- a/category/3. Certification&Prize.md
+++ b/category/3. Certification&Prize.md
@@ -2,6 +2,9 @@
 layout: category
 title: Certification/Prize
 ---
+
+<div style="margin-left: 20px">
+
 <h1><b>Certifications</b></h1>
 
 <div style="margin-left:20px;margin-top: 30px"><h2>Computer Certificates</h2></div>
@@ -107,4 +110,5 @@ title: Certification/Prize
 	<li style="margin-left: 40px">
 		Issued by Konkuk University/Konkuk University Medical Center</li>
 	<img src="../images/award2.png" alt="Img" style="width:85%;height:85%;margin-left:30px;float:center;margin-top: 15px;">
+</div>
 </div>
