--- a/0.Education.md
+++ b/0.Education.md
@@ -4,6 +4,9 @@ title: Education
 sidebar_link: True
 ---
 
+
+<div style="margin-left: 20px">
+
 <div>
 	<img src="images/kaist_logo.png" alt="KAIST mark" style="float:right;margin-right:210px;margin-top:10px;width:150px;height:55px;" >
 	<div>
@@ -27,7 +30,7 @@ sidebar_link: True
 </div>
 
 <div style="margin-top:200px;">
-	<img src="images/ewha.png" alt="Ewha mark" style="float:right;margin-right:200px;width:70px;height:70px;" >
+	<img src="images/ewha.png" alt="Ewha mark" style="float:right;margin-right:170px;width:70px;height:70px;" >
 	<div><h2><b>Ewha Womans University (B.S.)</b></h2>
 		<p style="color:#828385;font-size:120%;margin-left:20px"><i>Mar 2017 - Feb 2021</i></p>
 	</div>
@@ -58,4 +61,5 @@ sidebar_link: True
 	</div>
 </div>
 
+</div>
 
