--- a/category/1.Experience.md
+++ b/category/1.Experience.md
@@ -3,23 +3,25 @@ layout: category
 title: Experience
 ---
 
+<div style="margin-left: 20px">
+	
 <h1><b>Work Experience</b></h1>
 
-### Interactive Computing Lab (KAIST)
+<h3>Interactive Computing Lab (KAIST)</h3>
 
-<div>
+<div style="margin-top: 30px;">
 	<p style="color:#505152;margin-left:20px;float:left;font-size:120%;margin-bottom:5px;">
 		<i>M.S. Student</i>
 	</p>
 	<p style="color:#828385;font-size:110%;">
 		<i>&nbsp;&nbsp; Mar 2021 - Present</i>
 	</p>
+	<div style="margin-left: 30px;">
+		<li>Proceeding with the Smart Home Project</li>
+		<li>Write a review paper on "Sensing and Application" and study technical elements used in actual implementations through previous research reviews</li>
+		<li> Develop an integrated platform using <cite>Home Assistant</cite> and <cite>Raspberry Pi</cite> for living lab construction</li>
+	</div>
 </div>
-
-* Proceeding with the Smart Home Project
-  * Write a review paper on "Sensing and Application" and study technical elements used in actual implementations through previous research reviews
-  * Develop an integrated platform using <cite>Home Assistant</cite> and <cite>Raspberry Pi</cite> for living lab construction
-
 
 <div style="margin-top:40px;">
 	<p style="color:#505152;margin-left:20px;float:left;font-size:120%;margin-bottom:5px;">
@@ -28,16 +30,17 @@ title: Experience
 	<p style="color:#828385;font-size:110%;">
 		<i>&nbsp;&nbsp; Jun 2020 - Jul 2020</i>
 	</p>
+	<div style="margin-left: 30px;">
+		<li>Participate in the study of writing <ins>Tutorial of Machine Learning for Industrial IoT using sensor data from vibrating motor</ins><a href="">&nbsp;[Github]</a></li>
+		<li>Progressed the research with using <cite>C</cite> and <cite>Python</cite></li>
+		<li>Experienced sensor data analysis by end-to-end</li>
+	</div>
 </div>
 
-* Participate in the study of writing <ins>Tutorial of Machine Learning for Industrial IoT using sensor data from vibrating motor</ins><a href="">&nbsp;[Github]</a>
-* Progressed the research with using <cite>C</cite> and <cite>Python</cite>
-* Experienced sensor data analysis by end-to-end
-<br>
 <br>
 
 
-### Medical Imaging & Signal Lab (Ewha W.Univ)
+<h3>Medical Imaging & Signal Lab (Ewha W.Univ)</h3>
 
 <div>
 	<p style="color:#505152;margin-left:20px;float:left;font-size:120%;margin-bottom:5px;">
@@ -46,37 +49,43 @@ title: Experience
 	<p style="color:#828385;font-size:110%;">
 		<i>&nbsp;&nbsp; Aug 2018 - May 2020</i>
 	</p>
+	<div style="margin-left: 30px;">
+		<li>Progressed the research about Medical Image Processing with using <cite>Python</cite> (primary), <cite>MATLAB</cite></li>
+		<li>Comprised Input data by various Image Augmentation and Trained Resnet Model in <cite>Pytorch</cite></li>
+		<li>Participated in the research on the <ins>Poor psychomotor outcome prediction of preterm neonates using radiomics analysis</ins>
+		<ul style="margin-top: 10px">
+		  <li><font style="font-size:110%;">Conferences</font>
+		  	<ul>
+		    <li>[ISMRM 2020] – Digital poster  <a href="https://drive.google.com/file/d/12qn6_iiVL0KDuIEoVoBX6rX13kvtilLW/view?usp=sharing">(Link)</a></li>
+		    <li>[ICMRI 2020] – Oral presentation  <a href="https://drive.google.com/file/d/1gYXYipNMggUIvbSjqXIi2MBxQpY9c-Xp/view?usp=sharing">(Link)</a></li>
+			</ul>
+		   </li>
+		  </ul>
+		 </li>
+	</div>
 </div>
-
-* Progressed the research about Medical Image Processing with using <cite>Python</cite> (primary), <cite>MATLAB</cite>
-* Comprised Input data by various Image Augmentation and Trained Resnet Model in <cite>Pytorch</cite>
-* <p style="line-height:1.1">Participated in the research on the <ins>Poor psychomotor outcome prediction of preterm neonates using radiomics analysis</ins></p>
-  * <font style="font-size:110%">Conferences</font>
-    * [ISMRM 2020] – Digital poster  <a href="https://drive.google.com/file/d/12qn6_iiVL0KDuIEoVoBX6rX13kvtilLW/view?usp=sharing">(Link)</a>
-    * [ICMRI 2020] – Oral presentation  <a href="https://drive.google.com/file/d/1gYXYipNMggUIvbSjqXIi2MBxQpY9c-Xp/view?usp=sharing">(Link)</a>
-
 <br>
 <hr color="gray" noshade/>
 
 
 
-
-# **Relevant Experiences**
-### MediaZen AI Hackathon
+<h1><b>Relevant Experiences</b></h1>
+<h3>MediaZen AI Hackathon</h3>
 
 <div>
 	<p style="color:#505152;margin-left:20px;float:left;font-size:120%;margin-bottom:5px;">
 		<i>Team member</i>
 	</p>
-	<p style="color:#828385;font-size:110%;"><i>&nbsp;&nbsp; Dec 2020</i>
+	<p style="color:#828385;font-size:110%;">
+		<i>&nbsp;&nbsp; Dec 2020</i>
 	</p>
+	<div style="margin-left: 30px;">
+		<li>Implementation of a voice recognition system that can categorize the intent of error data using deep learning technology</li>
+		<li>Using sentencepiece based tokenizer and KcBERT model for intent classification in self-driven car system <a href="https://github.com/yuwon-shin/NLP_MZ">[Github]</a></li>
+	</div>
 </div>
 
-* Implementation of a voice recognition system that can categorize the intent of error data using deep learning technology
-* Using sentencepiece based tokenizer and KcBERT model for intent classification in self-driven car system <a href="https://github.com/yuwon-shin/NLP_MZ">[Github]</a>
-
-
-### KU Medical Hackathon
+<h3>KU Medical Hackathon</h3>
 
 <div>
 	<p style="color:#505152;margin-left:20px;float:left;font-size:120%;margin-bottom:5px;">
@@ -84,13 +93,14 @@ title: Experience
 	</p>
 	<p style="color:#828385;font-size:110%;"><i>&nbsp;&nbsp; Nov 2019</i>
 	</p>
+	<div style="margin-left: 30px;">
+		<li>Proposed a useful AI system that could be used in the medical field: System for Mental Illness Customized Analysis <a href="https://drive.google.com/file/d/1LY70VmBLgru0lfRtOZc_e5PVlSI48ge_/view?usp=sharing">(Link)</a></li>
+		<li>Studied about all technologies that will used in our system and specifically conceived a suggestion</li>
+	</div>
 </div>
 
-* Proposed a useful AI system that could be used in the medical field: System for Mental Illness Customized Analysis <a href="https://drive.google.com/file/d/1LY70VmBLgru0lfRtOZc_e5PVlSI48ge_/view?usp=sharing">(Link)</a>
-* Studied about all technologies that will used in our system and specifically conceived a suggestion
 
-
-### ICT COC Hackathon
+<h3>ICT COC Hackathon</h3>
 
 <div>
 	<p style="color:#505152;margin-left:20px;float:left;font-size:120%;margin-bottom:5px;">
@@ -99,66 +109,74 @@ title: Experience
 	<p style="color:#828385;font-size:110%;">
 		<i>&nbsp;&nbsp; Aug 2019</i>
 	</p>
+	<li style="margin-left: 30px;">Builded a direct-layer model using NLP for Diagnosis and Visualizing with early disease symptom classification</li>
 </div>
-* Builded a direct-layer model using NLP for Diagnosis and Visualizing with early disease symptom classification
+
 
 <br>
 <hr color="gray" noshade/>
 
 
 
-# **Extracurricular Experiences**
-### Teaching Assistant
+<h1><b>Extracurricular Experiences</b></h1>
+<h3>Teaching Assistant</h3>
 
-
-<div>
+<div style="margin-top: 20px">
 	<p style="color:#505152;margin-left:20px;float:left;font-size:120%;margin-bottom:5px;">
 		<i>KAIST - [CoE491-C]</i>
 	</p>
 	<p style="color:#828385;font-size:110%;">
 		<i>&nbsp;&nbsp; Fall semester, 2021</i>
 	</p>
+	<div style="margin-left: 30px;">
+		<li>스마트 융합특강<스마트 팩토리: AI 기반 제조></li>
+		<li>Smart Factory: AI-based manufacturing</li>
+		<li>Preparing class materials and creating assignments</li>
+	</div>
 </div>
-* 스마트 융합특강<스마트 팩토리: AI 기반 제조>
-  * Smart Factory: AI-based manufacturing
-  * Preparing class materials and creating assignments
 
-<div>
+
+<div style="margin-top: 30px">
 	<p style="color:#505152;margin-left:20px;float:left;font-size:120%;margin-bottom:5px;">
 		<i>Ewha - [38573-01]</i>
 	</p>
 	<p style="color:#828385;font-size:110%;">
 		<i>&nbsp;&nbsp; Fall semester, 2019</i>
 	</p>
+	<div style="margin-left: 30px;">
+		<li>유체 역학
+		<ul><li>Fluid Engineering (Peer Instructor)</li>
+		<li>Progressing supplementary classes and solving problems</li></ul>
+		</li>
+	</div>
 </div>
-* 유체 역학
-  * Fluid Engineering (Peer Instructor)
-  * Progressing supplementary classes and solving problems
 
 
-<p style="margin-bottom:70px;"><h3>Other Activity</h3></p>
-
-<div>
+<br>
+<h3>Other Activit</h3>
+<div style="margin-top: 20px">
 	<p style="color:#505152;margin-left:20px;float:left;font-size:120%;margin-bottom:5px;">
 		<i>이화-연세 연합 교육 봉사 동아리: 나누미</i>
 	</p>
 	<p style="color:#828385;font-size:110%;">
 		<i>&nbsp;&nbsp; Mar 2017 - Aug 2017</i>
 	</p>
+	<div style="margin-left: 30px;">	
+		<li>Ewha-Yonsei Associated Education Volunteer Club (Nanumi)</li>
+		<li>Teaching elementary and middle school students</li>
+	</div>
 </div>
-* Ewha-Yonsei Associated Education Volunteer Club (Nanumi)
-* Teaching elementary and middle school students
 
-
-<div>
+<div style="margin-top: 30px">
 	<p style="color:#505152;margin-left:20px;float:left;font-size:120%;margin-bottom:5px;">
 		<i>모교방문 입학 홍보 활동</i>
 	</p>
 	<p style="color:#828385;font-size:110%;">
 		<i>&nbsp;&nbsp; Mar 2017 - Aug 2017</i>
 	</p>
+	<div style="margin-left: 30px;">	
+		<li>Admissions promotional activities for high school students</li>
+	</div>
 </div>
-* Admissions promotional activities for high school students
 
-
-
+</div>
