--- a/category/2. Project&Publication.md
+++ b/category/2. Project&Publication.md
@@ -13,7 +13,7 @@ title: Publication/Project
 			Brain MRI radiomics analysis may predict poor psychomotor outcome in preterm neonates.
 		<i>European Radiology</i> (2021): 1-9</a>
 	</p>
-	<a href="https://link.springer.com/article/10.1007/s00330-021-07836-7" style="color:black;font-size:110%;"> <b>2. &nbsp;</b> Lee, Jaayeon, Sohyun Jeong, <u>You Won Shin</u>, et al.
+	<a href="https://www.koreascience.or.kr/article/JAKO202006763002291.page" style="color:black;font-size:110%;"> <b>2. &nbsp;</b> Lee, Jaayeon, Sohyun Jeong, <u>You Won Shin</u>, et al.
 		Analysis of Understanding Using Deep Learning Facial Expression Recognition for Real Time Online Lectures.
 	<i>Journal of Korea Multimedia Society</i>, 23, no. 12 (2020): 1464-1475</a>
 </div>
