--- a/category/4. Others.md
+++ b/category/4. Others.md
@@ -16,9 +16,10 @@ title: Others
 		<p style="color:#505152;float:left;font-size:170%;margin-left: 20px;margin-top: 20px">
 			<i>Instagram</i>
 		</p><br>
-		<p style="color:#828385;font-size:110%;margin-top:5px;">
-			<i>&nbsp;&nbsp;@_new._.uone</i>
-		</p>
+		&nbsp;&nbsp;
+		<a href="https://www.instagram.com/_new._.uone/" style="color:#828385;font-size:110%;margin-top:5px;">
+			<i>@_new._.uone</i>
+		</a>
 	</div>
 	<div>
 		<img src="../images/sns1.png" alt="Img" style="width:30%;height:30%;margin-right:20px;float:right;margin-left: 20px;">
@@ -29,14 +30,16 @@ title: Others
 	</div>
 </div>
 
+
 <div style="margin-top: 120px">
 	<div>
 		<p style="color:#505152;float:left;font-size:170%;margin-left: 20px;margin-top:20px;margin-bottom:5px;">
 			<i>Youtube</i>
 		</p><br>
-		<p style="color:#828385;font-size:110%;margin-top:5px;">
-			<i>&nbsp;&nbsp;원카이브 [Onechive]</i>
-		</p>
+		&nbsp;&nbsp;
+		<a href="https://www.youtube.com/channel/UClSR7HbNjmB_AMaC7sGRTug" style="color:#828385;font-size:110%;margin-top:5px;">
+			<i>원카이브 [Onechive]</i>
+		</a>
 	</div>
 	<div>
 		<img src="../images/sns2.png" alt="Img" style="width:40%;height:40%;margin-right:20px;float:right;margin-left: 20px;">
